--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 fido2ble (0.2) UNRELEASED; urgency=medium
 
-  * Updates all over the place.
+  * Added support for pairing while running
+  * Added logging arguments for general log level and uhid log level
+  * Improved disconnect and reconnect handling
+  * Switched to adaptive characteristic paths
+  * Add bluetooth address to hidraw device name
 
- -- Jó Ágila Bitsch <jo.bitsch@gmail.com>  Fri, 4 Apr 2025 14:31:55 +0200
+ -- Jó Ágila Bitsch <jo.bitsch@gmail.com>  Mon, 7 Apr 2025 08:39:12 +0200
 
 
 fido2ble (0.1) UNRELEASED; urgency=medium
